[gd_scene load_steps=18 format=2]

[ext_resource path="res://HUD/Buttons/Bounce_Default.png" type="Texture" id=1]
[ext_resource path="res://HUD/Buttons/Bounce_Depressed.png" type="Texture" id=2]
[ext_resource path="res://HUD/Buttons/Kill_Speed_Depressed.png" type="Texture" id=3]
[ext_resource path="res://HUD/Buttons/Speed_Defaulty.png" type="Texture" id=4]
[ext_resource path="res://HUD/Buttons/Speed_Depressed.png" type="Texture" id=5]
[ext_resource path="res://HUD/Buttons/Recovery_Default.png" type="Texture" id=6]
[ext_resource path="res://HUD/Buttons/Kill_Speed_Default.png" type="Texture" id=7]
[ext_resource path="res://HUD/Buttons/Recovery_Depressed.png" type="Texture" id=8]
[ext_resource path="res://HUD/UpgradeScreen.gd" type="Script" id=9]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 128, 128 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 128, 128 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 128, 128 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 128, 128 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 128, 128 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 128, 128 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 128, 128 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 128, 128 )

[node name="UpgradeScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KillSpeed" type="Button" parent="."]
margin_left = 555.006
margin_top = 364.215
margin_right = 683.006
margin_bottom = 492.215
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 1 )

[node name="Cost" type="Label" parent="KillSpeed"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = 32.0
margin_right = 20.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title2" type="Label" parent="KillSpeed"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -41.0
margin_top = 7.0
margin_right = 41.0
margin_bottom = 21.0
text = "Kill Time"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="KillSpeed"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.5
margin_top = -32.0
margin_right = 40.5
margin_bottom = -18.0
text = "Level: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="KillSpeed/Level"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -38.5
margin_top = 2.0
margin_right = 38.5
margin_bottom = 16.0
text = "2.5 Seconds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Button" parent="."]
margin_left = 32.9687
margin_top = 364.215
margin_right = 160.969
margin_bottom = 492.215
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="Speed"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0001
margin_top = 32.0
margin_right = 19.9999
margin_bottom = 46.0

[node name="Level" type="Label" parent="Speed"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.5001
margin_top = -32.0
margin_right = 40.4999
margin_bottom = -18.0
text = "Level: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="Speed/Level"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -38.5
margin_top = 2.0
margin_right = 38.5
margin_bottom = 16.0
text = "2.5 Seconds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Speed"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -41.0001
margin_top = 7.0
margin_right = 40.9999
margin_bottom = 21.0
text = "Player Speed"

[node name="RecoverySpeed" type="Button" parent="."]
margin_left = 391.322
margin_top = 364.215
margin_right = 519.322
margin_bottom = 492.215
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="RecoverySpeed"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = 32.0
margin_right = 20.0
margin_bottom = 46.0

[node name="Title2" type="Label" parent="RecoverySpeed"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.5
margin_top = 7.0
margin_right = 50.5
margin_bottom = 21.0
text = "Recovery Speed"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="RecoverySpeed"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.5
margin_top = -32.0
margin_right = 40.5
margin_bottom = -18.0
text = "Level: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="RecoverySpeed/Level"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -38.5
margin_top = 2.0
margin_right = 38.5
margin_bottom = 16.0
text = "2.5 Seconds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bounce" type="Button" parent="."]
margin_left = 222.673
margin_top = 364.215
margin_right = 350.673
margin_bottom = 492.215
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="Bounce"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = 32.0
margin_right = 20.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title3" type="Label" parent="Bounce"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -41.0
margin_top = 7.0
margin_right = 41.0
margin_bottom = 21.0
text = "Bounces"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="Bounce"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.5
margin_top = -32.0
margin_right = 40.5
margin_bottom = -18.0
text = "Level: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="Bounce/Level"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -38.5
margin_top = 2.0
margin_right = 38.5
margin_bottom = 16.0
text = "0 Bounces"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="Button" parent="."]
margin_left = 222.673
margin_top = 647.6
margin_right = 441.673
margin_bottom = 692.6
text = "The work continues"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flavor Text" type="Label" parent="."]
margin_left = 250.0
margin_top = 250.0
margin_right = 471.0
margin_bottom = 281.0
text = "The Lord is pleased with your work
and his favor empowers you"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Favor" type="Label" parent="."]
margin_left = 350.0
margin_top = 300.0
margin_right = 400.0
margin_bottom = 314.0
text = "Favor: 0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="KillSpeed" to="." method="_on_KillSpeed_pressed"]
[connection signal="pressed" from="Speed" to="." method="_on_Speed_pressed"]
[connection signal="pressed" from="RecoverySpeed" to="." method="_on_RecoverySpeed_pressed"]
[connection signal="pressed" from="Bounce" to="." method="_on_Bounce_pressed"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
